Fix some mis-alignments

--- a/style.css
+++ b/style.css
@@ -14,14 +14,14 @@ body {
 .startPc {
     width: 85px;
     height: 95px;
-    background-image: url('https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Vector%20Icons/Taskbar/Shutdown.webp?raw=true');
-    background-size: 115px 115px;
+    background: url(https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Vector%20Icons/Taskbar/Shutdown.webp?raw=true) no-repeat;
+    background-size: 100px;
+    background-position-y: 50%;
+    background-position-x: 48%;
     background-color: rgba(70, 70, 70, 0.6);
     border: none;
     padding: 10px 15px;
-    border-radius: 7px;
-    left: 100px;
-    top: 100px;
+    border-radius: 22px;
 }
 
 @keyframes fadeInOut {
@@ -868,6 +868,7 @@ input.pass:hover {
     width: calc(100% - 20px);
     height: calc(100% - 80px);
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    border: 1px solid rgb(74 69 74 / 78%);
 }
 
 .app-button {
@@ -878,8 +879,9 @@ input.pass:hover {
     background-color: rgba(60, 60, 60, 0.15);
     border-radius: 7px;
     padding: 10px;
-    box-shadow: 0px 0px 3px 1.5px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 1px 5px 1px rgba(0, 0, 0, 0.25);
     transition: background-color 0.2s ease;
+    border: 1px solid rgb(74 69 74 / 78%);
 }
 
 .app-button img {
@@ -911,6 +913,7 @@ input.pass:hover {
     transition: background-color 0.2s ease;
     position: fixed;
     bottom: 15px;
+    border: 1px solid rgb(74 69 74 / 78%);
 }
 
 .bottom-right-chip:hover {
@@ -934,14 +937,16 @@ input.pass:hover {
 }
 
 .shutdown-button {
-    position: fixed;
+    position: absolute;
     bottom: 15px;
     right: 15px;
-    background-image: url('https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Vector%20Icons/Taskbar/Shutdown.webp?raw=true');
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-    background-size: 30px 30px;
-    background-color: rgba(70, 70, 70, 0.6);
-    border: none;
+    background: url(https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Vector%20Icons/Taskbar/Shutdown.webp?raw=true) no-repeat;
+    box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.2);
+    background-position-x: 50%;
+    background-position-y: 50%;
+    background-size: 25px 25px;
+    background-color: rgba(70, 70, 70, 0.3);
+    border: 1px solid rgb(74 69 74 / 78%);
     padding: 10px 15px;
     border-radius: 7px;
     font-size: 14px;
@@ -2361,7 +2366,7 @@ canvas {
 .slider-group {
     display: flex;
     flex-direction: row;
-    gap: 7px;
+    gap: 9.5px;
     padding-left: 6px;
     margin-right: auto;
 }
@@ -2369,7 +2374,7 @@ canvas {
 .sliderr {
     -webkit-appearance: none;
     appearance: none;
-    width: 40px;
+    width: 38px;
     height: 95px;
     background: rgba(130, 130, 130, 0.3);
     border-radius: 10px;
